tests/baselines/reference/parserErrorRecovery_ParameterList6.errors.txt
parserErrorRecovery_ParameterList6.ts(2,23): error TS2304: Cannot find name 'break'.


==== parserErrorRecovery_ParameterList6.ts (1 errors) ====
    class Foo {
        public banana (x: break) { }
                          ~~~~~
!!! error TS2304: Cannot find name 'break'.
    }